Fix typo in documentation

--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 
 \renewcommand\bibname{References}
 
-%%% variable %%%
+%%% variables %%%
 \newcommand{\reporttitle}{An Interesting Project}
 \newcommand{\department}{Computer Science and Engineering}
 \newcommand{\departmentshort}{CSE}
